[gd_scene load_steps=15 format=2]

[ext_resource path="res://models/floors/base_floor_tiles.tres" type="TileSet" id=1]
[ext_resource path="res://models/obstacles/crate_row.tscn" type="PackedScene" id=2]
[ext_resource path="res://models/obstacles/rock_debris.png" type="Texture" id=3]
[ext_resource path="res://characters/enemies/spider/spider.tscn" type="PackedScene" id=4]
[ext_resource path="res://models/obstacles/crate_open.tscn" type="PackedScene" id=5]
[ext_resource path="res://models/obstacles/crate_partially_open.tscn" type="PackedScene" id=6]
[ext_resource path="res://models/obstacles/storage_room_locker_open.tscn" type="PackedScene" id=7]
[ext_resource path="res://models/obstacles/locker.tscn" type="PackedScene" id=8]
[ext_resource path="res://models/obstacles/crate.tscn" type="PackedScene" id=9]
[ext_resource path="res://models/obstacles/bench.tscn" type="PackedScene" id=10]
[ext_resource path="res://models/obstacles/fire_hazard.tscn" type="PackedScene" id=11]
[ext_resource path="res://levels/storage_room/storage_room.gd" type="Script" id=12]
[ext_resource path="res://models/entrance/entrance.tscn" type="PackedScene" id=13]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 528, 656, 496, 656, 200, 648, 216, 648, 328, 464, 280, 464, 136, 456, 136, 408, 472, 368, 472, 424, 584, 552, 592, 560, 592, 592, 560, 592, 456, 584, 536, 552, 584, 304, 536, 304, 456, 296, 472, 296, 328, 528, 280, 528, 200, 520, 216, 520, 328, 592, 280, 592, 200, 584, 216, 584, 624, 528, 624, 560, 584, 496, 328, 520, 376, 504, 376, 536, 344, 536, 656, 528, 584, 488, 584, 432, 584, 360, 656, 240, 584, 296, 624, 240, 584, 240, 592, 208, 624, 208, 472, 432, 344, 248, 344, 296, 144, 272, 520, 552, 472, 552, 456, 536, 472, 496, 424, 616, 528, 624, 328, 648, 376, 616, 264, 200, 560, 176, 592, 176, 424, 216, 376, 216, 560, 144, 264, 152, 528, 144, -80, 432, -80, 336, -16, 336, -16, 432, -16, 240, 16, 240, 16, 208, 48, 208, 152, 200, 80, 176, 80, 144, 112, 144, 152, 152, 112, 112, 144, 112, 184, 120, 184, 152, 144, 80, 312, 80, 232, 120, 312, 48, 344, 48, 344, 80, 496, 80, 496, 112, 528, 112, 232, 152, 184, 200, 184, 232, 232, 232, 232, 200, 536, 240, 536, 296, 520, 296, 520, 240, 456, 248, 424, 248, 472, 240, 376, 248, 376, 296, 376, 328, 424, 328, 424, 296, 472, 304, 472, 360, 536, 360, 520, 360, 520, 304, 536, 368, 536, 424, 520, 424, 520, 368, 536, 432, 536, 488, 520, 488, 520, 432, 536, 496, 520, 496, 472, 488, 424, 536, 424, 504, 104, 408, 104, 376, 56, 376, 56, 408, 24, 408, 24, 456, 56, 456, 56, 488, 152, 592, 104, 488, 104, 456, 152, 584, 280, 520, 264, 520, 264, 464, 216, 464, 344, 584, 376, 584, 328, 584, 424, 584, 560, 624, 280, 648, 264, 648, 264, 592, 216, 592, 152, 648, 496, 688, 144, 688, 144, 656, 112, 656, 112, 624, 80, 624, 80, 592, 48, 592, 48, 560, 16, 560, 16, 528, -16, 528, 280, 584, 264, 584, 264, 528, 216, 528, 200, 528, 200, 592, 584, 424, 56, 272, 584, 368, 48, 176, 144, 200, 56, 200, 200, 464, 152, 464, 152, 520, 152, 528 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 4, 5, 6, 7, 8, 9 ), PoolIntArray( 10, 11, 12, 13, 14, 15 ), PoolIntArray( 16, 17, 18, 19 ), PoolIntArray( 20, 21, 22, 23 ), PoolIntArray( 24, 25, 26, 27 ), PoolIntArray( 28, 29, 11, 10, 30 ), PoolIntArray( 31, 32, 33, 34, 20 ), PoolIntArray( 35, 28, 36, 37 ), PoolIntArray( 38, 16, 39, 35 ), PoolIntArray( 39, 16, 40, 41 ), PoolIntArray( 41, 40, 42, 43, 44 ), PoolIntArray( 45, 32, 31, 4, 9 ), PoolIntArray( 36, 28, 30 ), PoolIntArray( 46, 47, 48 ), PoolIntArray( 49, 15, 14 ), PoolIntArray( 50, 49, 14 ), PoolIntArray( 50, 14, 51, 52 ), PoolIntArray( 53, 54, 0, 55, 56 ), PoolIntArray( 57, 58, 59, 43, 60, 61 ), PoolIntArray( 62, 58, 57, 63, 64 ), PoolIntArray( 65, 66, 67, 68 ), PoolIntArray( 67, 69, 70 ), PoolIntArray( 70, 71, 72 ), PoolIntArray( 73, 74, 75, 76, 77 ), PoolIntArray( 77, 76, 78, 79, 80, 81 ), PoolIntArray( 79, 82, 83, 84, 80 ), PoolIntArray( 83, 85, 86, 87 ), PoolIntArray( 87, 88, 89, 63 ), PoolIntArray( 89, 90, 64, 63 ), PoolIntArray( 84, 83, 87, 63, 91 ), PoolIntArray( 73, 92, 93 ), PoolIntArray( 94, 95, 57, 61 ), PoolIntArray( 96, 97, 98, 99 ), PoolIntArray( 97, 40, 16 ), PoolIntArray( 100, 101, 60, 102 ), PoolIntArray( 61, 103, 46 ), PoolIntArray( 47, 104, 105 ), PoolIntArray( 106, 107, 18, 108, 109 ), PoolIntArray( 17, 110, 111, 112 ), PoolIntArray( 18, 17, 112 ), PoolIntArray( 18, 112, 108 ), PoolIntArray( 113, 114, 115, 116 ), PoolIntArray( 117, 118, 119, 120 ), PoolIntArray( 118, 36, 30, 121 ), PoolIntArray( 119, 118, 121, 122 ), PoolIntArray( 121, 15, 49, 122 ), PoolIntArray( 123, 119, 122, 52 ), PoolIntArray( 52, 51, 124, 125, 123 ), PoolIntArray( 106, 109, 8, 7, 126, 127, 105 ), PoolIntArray( 128, 129, 130 ), PoolIntArray( 131, 132, 133 ), PoolIntArray( 134, 135, 136, 6, 137 ), PoolIntArray( 5, 138, 139, 140 ), PoolIntArray( 6, 5, 140 ), PoolIntArray( 6, 140, 141 ), PoolIntArray( 142, 143, 56 ), PoolIntArray( 144, 142, 56, 24 ), PoolIntArray( 34, 142, 144, 20 ), PoolIntArray( 138, 31, 20 ), PoolIntArray( 54, 53, 145, 14, 13, 146 ), PoolIntArray( 25, 147, 148, 149 ), PoolIntArray( 26, 25, 149 ), PoolIntArray( 26, 149, 150 ), PoolIntArray( 151, 2, 1, 152, 153, 154 ), PoolIntArray( 151, 154, 155, 156, 134 ), PoolIntArray( 156, 157, 158, 134 ), PoolIntArray( 158, 159, 160 ), PoolIntArray( 160, 161, 162 ), PoolIntArray( 162, 163, 68 ), PoolIntArray( 43, 42, 96 ), PoolIntArray( 56, 55, 24 ), PoolIntArray( 164, 144, 24 ), PoolIntArray( 164, 24, 165 ), PoolIntArray( 21, 164, 165, 166 ), PoolIntArray( 22, 21, 166 ), PoolIntArray( 22, 166, 167 ), PoolIntArray( 45, 123, 125, 32 ), PoolIntArray( 22, 167, 27, 168 ), PoolIntArray( 26, 150, 3, 169 ), PoolIntArray( 170, 35, 37 ), PoolIntArray( 114, 170, 37, 117 ), PoolIntArray( 115, 114, 117, 120 ), PoolIntArray( 9, 115, 120, 45 ), PoolIntArray( 134, 158, 160 ), PoolIntArray( 61, 46, 48, 94 ), PoolIntArray( 171, 48, 47, 105, 127, 128 ), PoolIntArray( 35, 170, 172 ), PoolIntArray( 38, 35, 172 ), PoolIntArray( 110, 38, 172, 113 ), PoolIntArray( 111, 110, 113, 116 ), PoolIntArray( 109, 111, 116, 8 ), PoolIntArray( 171, 128, 130 ), PoolIntArray( 43, 96, 99 ), PoolIntArray( 134, 160, 162, 68, 131, 133 ), PoolIntArray( 68, 67, 70, 72, 130 ), PoolIntArray( 43, 99, 102, 60 ), PoolIntArray( 173, 74, 73, 174 ), PoolIntArray( 175, 171, 130, 72 ), PoolIntArray( 98, 97, 16 ), PoolIntArray( 139, 138, 20 ), PoolIntArray( 19, 98, 16 ), PoolIntArray( 102, 19, 18, 100 ), PoolIntArray( 93, 94, 48 ), PoolIntArray( 93, 48, 174, 73 ), PoolIntArray( 173, 174, 175 ), PoolIntArray( 72, 173, 175 ), PoolIntArray( 68, 130, 131 ), PoolIntArray( 134, 133, 135 ), PoolIntArray( 23, 139, 20 ), PoolIntArray( 141, 23, 22, 176 ), PoolIntArray( 6, 141, 176 ), PoolIntArray( 6, 176, 177 ), PoolIntArray( 6, 177, 178 ), PoolIntArray( 27, 165, 24 ), PoolIntArray( 27, 26, 168 ), PoolIntArray( 178, 22, 168, 179 ), PoolIntArray( 6, 178, 179 ), PoolIntArray( 6, 179, 137 ), PoolIntArray( 134, 137, 26, 169 ), PoolIntArray( 2, 169, 3 ), PoolIntArray( 0, 3, 148 ), PoolIntArray( 0, 148, 147 ), PoolIntArray( 0, 147, 55 ) ]
outlines = [ PoolVector2Array( -80, 336, -16, 336, -16, 240, 16, 240, 16, 208, 48, 208, 48, 176, 80, 176, 80, 144, 112, 144, 112, 112, 144, 112, 144, 80, 312, 80, 312, 48, 344, 48, 344, 80, 496, 80, 496, 112, 528, 112, 528, 144, 560, 144, 560, 176, 592, 176, 592, 208, 624, 208, 624, 240, 656, 240, 656, 528, 624, 528, 624, 560, 592, 560, 592, 592, 560, 592, 560, 624, 528, 624, 528, 656, 496, 656, 496, 688, 144, 688, 144, 656, 112, 656, 112, 624, 80, 624, 80, 592, 48, 592, 48, 560, 16, 560, 16, 528, -16, 528, -16, 432, -80, 432 ), PoolVector2Array( 56, 200, 144, 200, 144, 272, 56, 272 ), PoolVector2Array( 152, 152, 184, 152, 184, 120, 232, 120, 232, 152, 264, 152, 264, 200, 232, 200, 232, 232, 184, 232, 184, 200, 152, 200 ), PoolVector2Array( 376, 216, 424, 216, 424, 248, 456, 248, 456, 296, 424, 296, 424, 328, 376, 328, 376, 296, 344, 296, 344, 248, 376, 248 ), PoolVector2Array( 472, 240, 520, 240, 520, 296, 472, 296 ), PoolVector2Array( 536, 240, 584, 240, 584, 296, 536, 296 ), PoolVector2Array( 472, 304, 520, 304, 520, 360, 472, 360 ), PoolVector2Array( 536, 304, 584, 304, 584, 360, 536, 360 ), PoolVector2Array( 472, 368, 520, 368, 520, 424, 472, 424 ), PoolVector2Array( 536, 368, 584, 368, 584, 424, 536, 424 ), PoolVector2Array( 536, 432, 584, 432, 584, 488, 536, 488 ), PoolVector2Array( 472, 432, 520, 432, 520, 488, 472, 488 ), PoolVector2Array( 472, 496, 520, 496, 520, 552, 472, 552 ), PoolVector2Array( 536, 496, 584, 496, 584, 552, 536, 552 ), PoolVector2Array( 376, 504, 424, 504, 424, 536, 456, 536, 456, 584, 424, 584, 424, 616, 376, 616, 376, 584, 344, 584, 344, 536, 376, 536 ), PoolVector2Array( 280, 464, 328, 464, 328, 520, 280, 520 ), PoolVector2Array( 280, 528, 328, 528, 328, 584, 280, 584 ), PoolVector2Array( 280, 592, 328, 592, 328, 648, 280, 648 ), PoolVector2Array( 216, 592, 264, 592, 264, 648, 216, 648 ), PoolVector2Array( 216, 528, 264, 528, 264, 584, 216, 584 ), PoolVector2Array( 216, 464, 264, 464, 264, 520, 216, 520 ), PoolVector2Array( 152, 464, 200, 464, 200, 520, 152, 520 ), PoolVector2Array( 152, 528, 200, 528, 200, 584, 152, 584 ), PoolVector2Array( 152, 592, 200, 592, 200, 648, 152, 648 ), PoolVector2Array( 56, 376, 104, 376, 104, 408, 136, 408, 136, 456, 104, 456, 104, 488, 56, 488, 56, 456, 24, 456, 24, 408, 56, 408 ) ]

[node name="StorageRoom" type="Node2D"]
script = ExtResource( 12 )

[node name="FloorTileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 65541, 0, 65536, 65542, 0, 65537, 65543, 0, 0, 65544, 0, 0, 65545, 0, 65536, 65546, 0, 65536, 65547, 0, 1, 65548, 0, 0, 65549, 0, 0, 65550, 0, 1, 131076, 0, 0, 131077, 0, 65536, 131078, 0, 1, 131079, 0, 0, 131080, 0, 65536, 131081, 0, 65536, 131082, 0, 0, 131083, 0, 65536, 131084, 0, 0, 131085, 0, 0, 131086, 0, 65537, 131087, 0, 65536, 196611, 0, 1, 196612, 0, 65537, 196613, 0, 65536, 196614, 0, 0, 196615, 0, 1, 196616, 0, 65537, 196617, 0, 1, 196618, 0, 65537, 196619, 0, 0, 196620, 0, 1, 196621, 0, 65537, 196622, 0, 1, 196623, 0, 0, 196624, 0, 65536, 262146, 0, 65537, 262147, 0, 0, 262148, 0, 1, 262149, 0, 65536, 262150, 0, 0, 262151, 0, 0, 262152, 0, 1, 262153, 0, 0, 262154, 0, 0, 262155, 0, 65536, 262156, 0, 0, 262157, 0, 65536, 262158, 0, 65537, 262159, 0, 65536, 262160, 0, 65537, 262161, 0, 0, 327681, 0, 1, 327682, 0, 1, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 1, 327687, 0, 0, 327688, 0, 0, 327689, 0, 65537, 327690, 0, 0, 327691, 0, 1, 327692, 0, 0, 327693, 0, 1, 327694, 0, 0, 327695, 0, 65537, 327696, 0, 1, 327697, 0, 65536, 327698, 0, 65537, 393216, 0, 65536, 393217, 0, 1, 393218, 0, 1, 393219, 0, 65537, 393220, 0, 65537, 393221, 0, 65536, 393222, 0, 0, 393223, 0, 0, 393224, 0, 1, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 1, 393230, 0, 65536, 393231, 0, 65537, 393232, 0, 65536, 393233, 0, 65537, 393234, 0, 1, 393235, 0, 1, 524287, 0, 1, 458752, 0, 65537, 458753, 0, 65537, 458754, 0, 0, 458755, 0, 0, 458756, 0, 1, 458757, 0, 1, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 65536, 458763, 0, 65537, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 65536, 458769, 0, 0, 458770, 0, 65537, 458771, 0, 0, 458772, 0, 0, 589823, 0, 65537, 524288, 0, 1, 524289, 0, 0, 524290, 0, 65537, 524291, 0, 1, 524292, 0, 0, 524293, 0, 1, 524294, 0, 65537, 524295, 0, 1, 524296, 0, 1, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 1, 524307, 0, 1, 524308, 0, 0, 655359, 0, 65537, 589824, 0, 1, 589825, 0, 1, 589826, 0, 0, 589827, 0, 65537, 589828, 0, 65537, 589829, 0, 1, 589830, 0, 0, 589831, 0, 1, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 65536, 589836, 0, 0, 589837, 0, 65536, 589838, 0, 1, 589839, 0, 65536, 589840, 0, 0, 589841, 0, 0, 589842, 0, 65536, 589843, 0, 65536, 589844, 0, 0, 720892, 0, 65536, 720893, 0, 0, 720894, 0, 1, 720895, 0, 65537, 655360, 0, 65536, 655361, 0, 65537, 655362, 0, 0, 655363, 0, 0, 655364, 0, 1, 655365, 0, 1, 655366, 0, 1, 655367, 0, 0, 655368, 0, 0, 655369, 0, 1, 655370, 0, 65536, 655371, 0, 65537, 655372, 0, 65536, 655373, 0, 65536, 655374, 0, 1, 655375, 0, 65537, 655376, 0, 65536, 655377, 0, 65536, 655378, 0, 0, 655379, 0, 65536, 655380, 0, 0, 786428, 0, 1, 786429, 0, 65536, 786430, 0, 0, 786431, 0, 65536, 720896, 0, 65537, 720897, 0, 0, 720898, 0, 0, 720899, 0, 65537, 720900, 0, 1, 720901, 0, 1, 720902, 0, 65537, 720903, 0, 1, 720904, 0, 65537, 720905, 0, 1, 720906, 0, 65537, 720907, 0, 65536, 720908, 0, 65536, 720909, 0, 1, 720910, 0, 65537, 720911, 0, 0, 720912, 0, 1, 720913, 0, 65537, 720914, 0, 1, 720915, 0, 65536, 720916, 0, 0, 851964, 0, 1, 851965, 0, 1, 851966, 0, 65537, 851967, 0, 65536, 786432, 0, 0, 786433, 0, 1, 786434, 0, 0, 786435, 0, 65536, 786436, 0, 0, 786437, 0, 0, 786438, 0, 1, 786439, 0, 0, 786440, 0, 1, 786441, 0, 65536, 786442, 0, 65536, 786443, 0, 0, 786444, 0, 1, 786445, 0, 65537, 786446, 0, 65537, 786447, 0, 0, 786448, 0, 65537, 786449, 0, 0, 786450, 0, 65537, 786451, 0, 1, 786452, 0, 1, 917500, 0, 0, 917501, 0, 1, 917502, 0, 65536, 917503, 0, 65536, 851968, 0, 65536, 851969, 0, 65537, 851970, 0, 1, 851971, 0, 65536, 851972, 0, 65537, 851973, 0, 0, 851974, 0, 0, 851975, 0, 1, 851976, 0, 1, 851977, 0, 0, 851978, 0, 65537, 851979, 0, 0, 851980, 0, 1, 851981, 0, 1, 851982, 0, 65537, 851983, 0, 1, 851984, 0, 1, 851985, 0, 65536, 851986, 0, 65536, 851987, 0, 0, 851988, 0, 65536, 983039, 0, 65537, 917504, 0, 0, 917505, 0, 65537, 917506, 0, 65537, 917507, 0, 1, 917508, 0, 0, 917509, 0, 0, 917510, 0, 65536, 917511, 0, 1, 917512, 0, 0, 917513, 0, 65537, 917514, 0, 65536, 917515, 0, 1, 917516, 0, 0, 917517, 0, 0, 917518, 0, 1, 917519, 0, 65537, 917520, 0, 1, 917521, 0, 65536, 917522, 0, 0, 917523, 0, 1, 917524, 0, 65536, 1048575, 0, 0, 983040, 0, 65537, 983041, 0, 1, 983042, 0, 65536, 983043, 0, 0, 983044, 0, 0, 983045, 0, 65536, 983046, 0, 1, 983047, 0, 1, 983048, 0, 65537, 983049, 0, 65536, 983050, 0, 0, 983051, 0, 0, 983052, 0, 65537, 983053, 0, 65537, 983054, 0, 0, 983055, 0, 65537, 983056, 0, 1, 983057, 0, 65536, 983058, 0, 1, 983059, 0, 65537, 983060, 0, 65537, 1114111, 0, 0, 1048576, 0, 1, 1048577, 0, 1, 1048578, 0, 65537, 1048579, 0, 0, 1048580, 0, 1, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 1, 1048585, 0, 0, 1048586, 0, 65536, 1048587, 0, 0, 1048588, 0, 1, 1048589, 0, 0, 1048590, 0, 1, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 65537, 1048594, 0, 0, 1048595, 0, 0, 1048596, 0, 0, 1114112, 0, 65536, 1114113, 0, 0, 1114114, 0, 65537, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 1, 1114118, 0, 1, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 65537, 1114122, 0, 0, 1114123, 0, 65537, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 1, 1114127, 0, 65536, 1114128, 0, 65536, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 65537, 1179649, 0, 0, 1179650, 0, 65537, 1179651, 0, 1, 1179652, 0, 65537, 1179653, 0, 1, 1179654, 0, 0, 1179655, 0, 65537, 1179656, 0, 65536, 1179657, 0, 65537, 1179658, 0, 0, 1179659, 0, 65536, 1179660, 0, 1, 1179661, 0, 65537, 1179662, 0, 0, 1179663, 0, 65536, 1179664, 0, 1, 1179665, 0, 1, 1179666, 0, 0, 1245186, 0, 1, 1245187, 0, 65537, 1245188, 0, 1, 1245189, 0, 1, 1245190, 0, 1, 1245191, 0, 0, 1245192, 0, 1, 1245193, 0, 1, 1245194, 0, 65536, 1245195, 0, 65536, 1245196, 0, 65536, 1245197, 0, 65537, 1245198, 0, 0, 1245199, 0, 65537, 1245200, 0, 1, 1245201, 0, 65536, 1310723, 0, 1, 1310724, 0, 65537, 1310725, 0, 0, 1310726, 0, 1, 1310727, 0, 1, 1310728, 0, 0, 1310729, 0, 0, 1310730, 0, 1, 1310731, 0, 0, 1310732, 0, 65536, 1310733, 0, 65536, 1310734, 0, 1, 1310735, 0, 0, 1310736, 0, 1, 1376260, 0, 1, 1376261, 0, 65537, 1376262, 0, 0, 1376263, 0, 65537, 1376264, 0, 65536, 1376265, 0, 65537, 1376266, 0, 65537, 1376267, 0, 1, 1376268, 0, 1, 1376269, 0, 1, 1376270, 0, 65537, 1376271, 0, 65537, 1441797, 0, 0, 1441798, 0, 65536, 1441799, 0, 0, 1441800, 0, 0, 1441801, 0, 65537, 1441802, 0, 0, 1441803, 0, 0, 1441804, 0, 65536, 1441805, 0, 1, 1441806, 0, 65536 )

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navigation2D"]
navpoly = SubResource( 1 )

[node name="Spider" parent="." instance=ExtResource( 4 )]
position = Vector2( 312, 192 )
nav_2d_path = NodePath("../Navigation2D")

[node name="Spider2" parent="." instance=ExtResource( 4 )]
position = Vector2( 352, 472 )
nav_2d_path = NodePath("../Navigation2D")

[node name="CrateRow" parent="." instance=ExtResource( 2 )]

[node name="CrateRow2" parent="." instance=ExtResource( 2 )]
position = Vector2( 240, 56 )

[node name="Locker" parent="." instance=ExtResource( 8 )]
position = Vector2( 120, 248 )

[node name="StorageRoomLocker" parent="." instance=ExtResource( 7 )]

[node name="Crate" parent="." instance=ExtResource( 9 )]
position = Vector2( 496, 272 )

[node name="Crate2" parent="." instance=ExtResource( 9 )]
position = Vector2( 560, 272 )

[node name="Crate3" parent="." instance=ExtResource( 9 )]
position = Vector2( 560, 336 )

[node name="Crate4" parent="." instance=ExtResource( 9 )]
position = Vector2( 560, 400 )

[node name="Crate5" parent="." instance=ExtResource( 9 )]
position = Vector2( 496, 464 )

[node name="Crate6" parent="." instance=ExtResource( 9 )]
position = Vector2( 304, 496 )

[node name="Crate7" parent="." instance=ExtResource( 9 )]
position = Vector2( 176, 560 )

[node name="Crate8" parent="." instance=ExtResource( 9 )]
position = Vector2( 240, 560 )

[node name="Crate9" parent="." instance=ExtResource( 9 )]
position = Vector2( 240, 624 )

[node name="Crate10" parent="." instance=ExtResource( 9 )]
position = Vector2( 304, 624 )

[node name="CrateLid" parent="." instance=ExtResource( 6 )]
position = Vector2( 176, 496 )

[node name="CrateLid2" parent="." instance=ExtResource( 6 )]
position = Vector2( 560, 528 )

[node name="CrateLid3" parent="." instance=ExtResource( 6 )]
position = Vector2( 496, 400 )

[node name="CrateOpen" parent="." instance=ExtResource( 5 )]
position = Vector2( 560, 464 )

[node name="CrateOpen2" parent="." instance=ExtResource( 5 )]
position = Vector2( 496, 336 )

[node name="CrateOpen3" parent="." instance=ExtResource( 5 )]
position = Vector2( 496, 528 )

[node name="CrateOpen4" parent="." instance=ExtResource( 5 )]
position = Vector2( 240, 496 )

[node name="CrateOpen5" parent="." instance=ExtResource( 5 )]
position = Vector2( 304, 560 )

[node name="CrateOpen6" parent="." instance=ExtResource( 5 )]
position = Vector2( 176, 624 )

[node name="Bench" parent="." instance=ExtResource( 10 )]
position = Vector2( 216, 720 )

[node name="RockDebris" type="Sprite" parent="Bench"]
position = Vector2( 0, -11 )
texture = ExtResource( 3 )

[node name="Bench2" parent="." instance=ExtResource( 10 )]
position = Vector2( 320, 720 )

[node name="Bench3" parent="." instance=ExtResource( 10 )]
position = Vector2( 432, 720 )

[node name="RockDebris2" type="Sprite" parent="Bench3"]
position = Vector2( 0, -11 )
texture = ExtResource( 3 )
flip_h = true

[node name="Fire" parent="." instance=ExtResource( 11 )]
position = Vector2( 80, 400 )

[node name="Fire2" parent="." instance=ExtResource( 11 )]
position = Vector2( 112, 432 )

[node name="Fire3" parent="." instance=ExtResource( 11 )]
position = Vector2( 48, 432 )

[node name="Fire4" parent="." instance=ExtResource( 11 )]
position = Vector2( 80, 464 )

[node name="Fire5" parent="." instance=ExtResource( 11 )]
position = Vector2( 368, 560 )

[node name="Fire6" parent="." instance=ExtResource( 11 )]
position = Vector2( 400, 528 )

[node name="Fire7" parent="." instance=ExtResource( 11 )]
position = Vector2( 432, 560 )

[node name="Fire8" parent="." instance=ExtResource( 11 )]
position = Vector2( 400, 592 )

[node name="Fire9" parent="." instance=ExtResource( 11 )]
position = Vector2( 400, 240 )

[node name="Fire10" parent="." instance=ExtResource( 11 )]
position = Vector2( 368, 272 )

[node name="Fire11" parent="." instance=ExtResource( 11 )]
position = Vector2( 432, 272 )

[node name="Fire12" parent="." instance=ExtResource( 11 )]
position = Vector2( 400, 304 )

[node name="Fire13" parent="." instance=ExtResource( 11 )]
position = Vector2( 208, 144 )

[node name="Fire14" parent="." instance=ExtResource( 11 )]
position = Vector2( 176, 176 )

[node name="Fire15" parent="." instance=ExtResource( 11 )]
position = Vector2( 208, 208 )

[node name="Fire16" parent="." instance=ExtResource( 11 )]
position = Vector2( 240, 176 )

[node name="PlayerRespawn" type="Position2D" parent="."]
position = Vector2( -32, 384 )

[node name="Entrance" parent="." instance=ExtResource( 13 )]
position = Vector2( -112, 384 )
rotation = 1.5708
[connection signal="body_entered" from="Entrance" to="." method="_on_Entrance_body_entered"]
